-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22, 23
-
Component/s: tools
-
b20
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8331590 | 22.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b05 |
| JDK-8332754 | 21.0.5-oracle | Christian Stein | P4 | Resolved | Fixed | b01 |
| JDK-8331705 | 21.0.4 | Aleksey Shipilev | P4 | Resolved | Fixed | b02 |
ws.ws_xpixel = env->GetIntField(data, ws_xpixel);
This is wrong: all of the fields in class winsize are of type short.
I don't know if this bug is confined to this particular method.
As an aside, I'm shocked that the JNI accessors, even in debug mode, don't check the types of the fields they access.
- backported by
-
JDK-8331590 Illegal accesses in Java_jdk_internal_org_jline_terminal_impl_jna_linux_CLibraryImpl_ioctl0
-
- Resolved
-
-
JDK-8331705 Illegal accesses in Java_jdk_internal_org_jline_terminal_impl_jna_linux_CLibraryImpl_ioctl0
-
- Resolved
-
-
JDK-8332754 Illegal accesses in Java_jdk_internal_org_jline_terminal_impl_jna_linux_CLibraryImpl_ioctl0
-
- Resolved
-
- relates to
-
JDK-8306983 Do not invoke external programs when switch terminal to raw mode on selected platforms
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21u-dev/021372c7
-
Commit
openjdk/jdk22u/d2e1ea47
-
Commit
openjdk/jdk/87e864bf
-
Review
openjdk/jdk21u-dev/540
-
Review
openjdk/jdk22u/172
-
Review
openjdk/jdk/18910